<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/englishViolet"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_values"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:lines="2"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/seven"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/wildBlueYonder"
        android:text="7"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/eight"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:background="@color/wildBlueYonder"
        android:text="8"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toTopOf="@+id/seven" />

    <Button
        android:id="@+id/nine"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:background="@color/wildBlueYonder"
        android:text="9"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toTopOf="@+id/eight" />

    <Button
        android:id="@+id/divide"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:layout_marginEnd="8dp"
        android:background="@color/wildBlueYonder"
        android:text="/"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toTopOf="@+id/nine" />

    <Button
        android:id="@+id/four"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/wildBlueYonder"
        android:text="4"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/five"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:background="@color/wildBlueYonder"
        android:text="5"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toTopOf="@+id/four" />

    <Button
        android:id="@+id/six"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:background="@color/wildBlueYonder"
        android:text="6"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toTopOf="@+id/five" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:layout_marginEnd="8dp"
        android:background="@color/wildBlueYonder"
        android:text="x"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toTopOf="@+id/six" />

    <Button
        android:id="@+id/one"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/wildBlueYonder"
        android:text="1"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/decimal"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/two"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:background="@color/wildBlueYonder"
        android:text="2"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toTopOf="@+id/one" />

    <Button
        android:id="@+id/three"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:background="@color/wildBlueYonder"
        android:text="3"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/subtract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toTopOf="@+id/two" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:layout_marginEnd="8dp"
        android:background="@color/wildBlueYonder"
        android:text="-"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toTopOf="@+id/three" />

    <Button
        android:id="@+id/decimal"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/wildBlueYonder"
        android:text="."
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintEnd_toStartOf="@+id/zero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/zero"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:background="@color/wildBlueYonder"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/decimal"
        app:layout_constraintEnd_toStartOf="@+id/evaluate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/decimal"
        app:layout_constraintTop_toTopOf="@+id/decimal" />

    <Button
        android:id="@+id/evaluate"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:background="@color/wildBlueYonder"
        android:text="="
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toTopOf="@+id/zero" />

    <Button
        android:id="@+id/add"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:layout_marginEnd="8dp"
        android:background="@color/wildBlueYonder"
        android:text="+"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/evaluate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/evaluate"
        app:layout_constraintTop_toTopOf="@+id/evaluate" />

    <Button
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginBottom="16dp"
        android:background="@color/wildBlueYonder"
        android:text="clear"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/add"
        app:layout_constraintStart_toStartOf="@+id/decimal" />
</androidx.constraintlayout.widget.ConstraintLayout>